--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,11 @@
 .jumbotron {
-  max-width: 400px;
+  max-width: 600px;
   margin: 0 auto;
-  padding: 24px;
 }
 
-.jumbotron .title {
-  text-align: center;
+.title {
+  margin: 0;
+  line-height: 2;
 }
 
 .table {
